--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,5 +13,6 @@
 <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Italianno' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 
 </head>
