--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {% include header.html %}
 <div class="home-wrapper">
-<a class="site-title" href="{{ site.baseurl }}/">return to index</a>
+<!--<a class="site-title" href="{{ site.baseurl }}/">return to index</a>-->
 </div>
     <div class="page-content">
       <div class="wrapper">
