--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -110,8 +110,8 @@ a {
 blockquote {
     font-size: 12px;
     border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #f5f5f5;
+    //border-radius: 3px;
+    //background-color: #f5f5f5;
       padding: 8px 12px;
 
     > :last-child {
@@ -193,6 +193,7 @@ pre {
     margin-left: auto;
     padding-right: $spacing-unit;
     padding-left: $spacing-unit;
+    padding-bottom:8px;
     @extend %clearfix;
 
 
