--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$base-font-family: 'Libre Baskerville', serif;
+$base-font-family: 'Bembo Infant MT Std', serif;
 $base-font-size:   14px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 2.0;
@@ -15,7 +15,7 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #fff;
-$brand-color:      #C24641;
+$brand-color:      #FF786D;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
