--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,9 +10,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
   
-<link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Italianno' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+
+<script type="text/javascript" src="//fast.fonts.net/jsapi/90eb2820-5688-46a4-9c13-bee04e1ca85c.js"></script>
 
 </head>
