design overhaul. Update section added.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,6 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
   
-
-<script type="text/javascript" src="//fast.fonts.net/jsapi/90eb2820-5688-46a4-9c13-bee04e1ca85c.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7408374/7373552/css/fonts.css" />
 
 </head>
