--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -108,8 +108,8 @@ a {
  * Blockquotes
  */
 blockquote {
-    font-size: 13px;
-    border: 1px solid $grey-color-light;
+    font-size: 9px;
+    //border: 1px solid $grey-color-light;
     //border-radius: 3px;
     //background-color: #f5f5f5;
       padding: 8px 12px;
