--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="site-header">
 
-  <div class="special-wrapper">
+<a class="site-title" href="{{ site.baseurl }}/">olsen.<br>works</a>
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+  <div class="special-wrapper">
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -16,6 +16,7 @@
         <a class="page-link" href="{{site.baseurl}}/essays.html"> Essays</a>
          <a class="page-link" href="{{site.baseurl}}/fiction.html"> Fiction</a>
           <a class="page-link" href="{{site.baseurl}}/other.html"> Other</a>
+          <a class="page-link" href="mailto:scg.olsen@gmail.com"> Contact</a>
         <!--{% for page in site.pages %}
           {% if page.title %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}"> {{ page.title }}</a>
@@ -23,9 +24,9 @@
         {% endfor %}-->
       </div>
     </nav>
-   <div class="contact">
+   <!--<div class="contact">
     <a class="contact-link" href="mailto:scg.olsen@gmail.com">scg.olsen@gmail.com</a>
-  </div>
+  </div>-->
   </div>
 </header>
 
