--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,14 +5,12 @@
     padding-top:12px;
     padding-bottom:10px;
     border-bottom: 1px solid #1B1B1B;
-    border-top: 4px solid #FF786d;
-    //max-height: 40px;
-    //padding-bottom:10px;
+    height: 75px;
     background-color:$background-color;
 
     // Positioning context for the mobile navigation icon
-    position: relative;
-    //box-shadow: 0px 5px 3px #888888;
+    position: fixed;
+    box-shadow: 0px 2px 2px #888888;
     /* Line: */
     width:100%;
 }
@@ -31,27 +29,37 @@
 }
 
 .site-title {
-    padding-top:10px;
-    font-size: 18px;
-    line-height: 26px;
-    letter-spacing: -1px;
+    //position:fixed;
+    padding:29px;
+    background:#ff4743;
+    font-size: 48px;
+    line-height: 50px;
+    letter-spacing: 0px;
     margin-bottom: 0;
     float: left;
-    color:#FF786D;
-    //width:100%;
-    margin-right: auto;
-    margin-left: auto;
-    text-align:center;
-    font-weight: 400;
-    //font-family: 'microgramma com';
-    //border-bottom: 1px solid #333;
+    color:#FFFBFB;
+    margin-left: 5%;
+    font-weight: 800;
+    font-family: "Gotham SSm A", "Gotham SSm B";
+    box-shadow: 1px 3px 5px #888888;
 
     &,
     &:visited {
-        color: #FF786D;
+        color: #FFFBFB;
     }
     &:hover {
-        color: #0C090A;
+        //color: #0C090A;
+        box-shadow: 1px 3px 5px #7f3231;
+    }
+     @include media-query($narrow) {
+        font-size: 18px;
+        padding:4px;
+        line-height:1.4;
+    }
+    @include media-query($on-laptop) {
+        font-size: 18px;
+        padding:4px;
+        line-height:1.4;
     }
 }
 
@@ -70,14 +78,16 @@
 }
 
 .site-nav {
-    float: right;
-    margin-left:168px;
+    float: left;
+    margin-left:60px;
     margin-right:auto;
     line-height: 26px;
-    padding-top:10px;
+    padding-top:34px;
     //margin-top:20px;
-    font-size:12px;
-    //font-family: 'Bembo Infant MT Std';
+    font-size:10px;
+    font-family: "Gotham SSm A", "Gotham SSm B";
+    font-weight: 800;
+    color:#ff4743;
 
     
 
@@ -86,7 +96,7 @@
     }
 
     .page-link {
-        color: $text-color;
+        color: #ff4743;
         line-height: 26px;
         font-size:12px;
         text-align:center;
@@ -112,14 +122,14 @@
             display: block;
             float: right;
             width: 36px;
-            height: 26px;
+            height: 20px;
             line-height: 0;
-            padding-top: 10px;
+            padding-top: 0px;
             text-align: center;
 
             > svg {
                 width: 18px;
-                height: 15px;
+                height: 10px;
 
                 path {
                     fill: $grey-color-dark;
@@ -221,22 +231,95 @@
  * Page content
  */
 
- .page-title {
-    //font-family: 'microgramma com';
+.feature-wrapper{
+    width:60%;
+    float:left;
+    @include media-query($on-palm) {
+        width:100%;
+    }
+}
+
+.post-title-feature{
+    font-family: "Gotham SSm A", "Gotham SSm B";
+    font-weight:800;
+    font-size:24px;
+    line-height:0;
+    margin-bottom:24px;
+}
+
+.feature-text{
+    margin-top:10px;
+}
+
+.post-title-min{
+    font-family: "Gotham SSm A", "Gotham SSm B";
+    font-weight: 300;
+    font-style: italic;
+    color:#ff4743;
+    margin:0;
     font-size:18px;
+    line-height:1.3;
+}
+
+.post-categories-min{
+    margin-bottom:6px;
+    font-family:'Gotham';
+    font-weight:300;
+    text-transform: capitalize;
+}
+
+.update-wrapper{
+    width:22%;
+    margin-left:13%;
+    float:right;
+    @include media-query($on-palm) {
+        width:100%;
+        margin-left: auto;
+        margin-bottom: 16px;
+    }
+}
+
+.update-title{
+    font-weight:700;
+    line-height:0;
+    color:#7F3231;
+}
+
+.update{
+    color:#7F3231;
+}
+
+.recent-wrapper{
+    float:left;
+}
+
+ .page-title {
+    font-family: "Gotham SSm A", "Gotham SSm B";
+    font-weight:800;
+    font-size:24px;
  }
 
  .recent-page-title {
-    //font-family: 'microgramma com';
-    font-size:18px;
-    border-bottom: 1px solid #979797;
-    margin-top:40px;
+    font-family: "Gotham SSm A", "Gotham SSm B";
+    font-weight: 800;
+    font-size:72px;
+    border-bottom: 20px solid #CCC9C9;
+    margin-top:60px;
+    line-height: 32px;
+    margin-bottom:29px;
+
+    @include media-query($on-palm) {
+        font-size: 18px;
+        padding:4px;
+        line-height:1.4;
+        border-bottom: 2px solid #CCC9C9;
+    }
  }
 
 
 .page-content {
     //padding: $spacing-unit 0;
-    margin-top:20px;
+    margin-top:140px;
     //position:relative;
 }
 
@@ -265,10 +348,20 @@
 
 .post-link {
     //display: block;
-    //font-family: 'microgramma com';
-    font-size: 14px;
+    font-family: "Gotham SSm A", "Gotham SSm B";
+    font-size: 24px;
     margin-bottom:4px;
-    line-height: 2.4;
+    line-height: 1.3;
+    font-weight: 300;
+    font-style:italic;
+}
+
+.post-categories{
+    margin-bottom:6px;
+    font-family: "Gotham SSm A", "Gotham SSm B";
+    font-weight:300;
+    font-size:18px;
+    text-transform: capitalize;
 }
 
 .post-list h2 {
@@ -297,12 +390,12 @@
 }
 
 .post-title {
-    font-size: 18px;
-    font-weight: 700;
+    font-size: 24px;
+    font-weight: 800;
     letter-spacing: -1px;
     line-height: 1;
     color:#454444;
-    //font-family: 'Microgramma com', sans-serif;
+    font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
     margin-top:60px;
 
     @include media-query($on-laptop) {
@@ -340,21 +433,22 @@
 
 .post-content p{
 
-width:78%;
+//width:60%;
 }
 
 .post-content blockquote {
 
     float:right;
-    font-size:11px;
-    width:20%;
-    margin-left:40px;
+    font-size:10px;
+    width:25%;
+    margin-left:12%;
     text-align:left;
     clear:both;
-    font-weight: bold;
+    font-weight: 300;
+    font-style:italic;
 
     @include media-query($on-palm) {
-        width:80%;
+        width:100%;
         float:left;
         margin-left:0;
         margin-bottom:10px;
@@ -371,8 +465,8 @@ width:100%;
 
     float:right;
     font-size:9px;
-    width:20%;
-    margin-left:40px;
+    width:22%;
+    margin-left:13%;
     text-align:left;
     clear:both;
     font-weight: bold;
