--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -104,8 +104,15 @@
 
         // Gaps between nav items, but not on the first one
         &:not(:first-child) {
-            margin-left: 82px;
+            margin-left: 90px;
         }
+
+        @include media-query($on-laptop) {
+            &:not(:first-child) {
+            margin-left: 50px;
+        }
+    }
+
     }
 
     @include media-query($on-palm) {
@@ -263,8 +270,8 @@
 
 .post-categories-min{
     margin-bottom:6px;
-    font-family:'Gotham';
-    font-weight:300;
+    font-family:"Gotham SSm A", "Gotham SSm B";
+    font-weight:200;
     text-transform: capitalize;
 }
 
@@ -359,7 +366,7 @@
 .post-categories{
     margin-bottom:6px;
     font-family: "Gotham SSm A", "Gotham SSm B";
-    font-weight:300;
+    font-weight:200;
     font-size:18px;
     text-transform: capitalize;
 }
