Design Overhaul. New Posts

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,12 +7,12 @@
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li>Contact</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li>SO</li>
         </ul>
       </div>
 
       <div class="footer-col  footer-col-2">
+        <!--<li>Site designed and develped by Scott Olsen 2016.</li>-->
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
