--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,15 @@
   <body>
 
     {% include header.html %}
+    {% if page.url contains "index" %}
+  <div class="hero">
+    <div class="curtain"></div>
+      <div class="hero-wrapper">
+        <h1 class="post-title-feature">Welcome</h1>
+    <p class="welcome">This is the personal site of Scott Olsen. You'll find a collection of some of my written work on this site. I'm happy you stopped by, and hope you get some enjoyment out of my essays or fictions. You can access the most recently posted content below. </p>
+  </div>
+  </div>
+  {% endif %}
 <div class="home-wrapper">
 <!--<a class="site-title" href="{{ site.baseurl }}/">return to index</a>-->
 </div>
@@ -13,10 +22,11 @@
       <div class="wrapper">
 
         {{ content }}
+        {% include footer.html %}
       </div>
     </div>
 
-    {% include footer.html %}
+    
 
   </body>
 
