--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,7 +17,7 @@ body {
     font-family: $base-font-family;
     font-size: $base-font-size;
     line-height: $base-line-height;
-    font-weight: 300;
+    font-weight: 100;
     color: $text-color;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
@@ -55,7 +55,13 @@ figure > img {
 }
 
 figcaption {
-    font-size: $small-font-size;
+    font-size: $small-font-size - 2px;
+    float:left;
+    width:100%;
+    padding-left:34%;
+    font-family:"Operator";
+    font-weight:700;
+    margin-bottom:20px;
 }
 
 
@@ -83,22 +89,33 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 300;
 }
 
+h1{
+        float:left;
+}
 
 
 /**
  * Links
  */
 a {
-    color: $brand-color;
+    color: $brand-red;
     text-decoration: none;
+    transition-property: border-bottom-width;
+       transition-duration:100ms;
+       transition-timing-function: linear; 
+       transition-delay: initial;
+       border-bottom: 0px solid $brand-black;
 
     &:visited {
-        color: darken($brand-color, 15%);
+        //color: darken($brand-color, 15%);
     }
 
     &:hover {
-        color: $text-color;
-        text-decoration: underline;
+       transition-property: border-bottom-width;
+       transition-duration:100ms;
+       transition-timing-function: linear; 
+       transition-delay: initial;
+       border-bottom: 4px solid $brand-black;
     }
 }
 
@@ -112,7 +129,7 @@ blockquote {
     //border: 1px solid $grey-color-light;
     //border-radius: 3px;
     //background-color: #f5f5f5;
-      padding: 8px 12px;
+    //padding: 8px 12px;
 
     > :last-child {
         margin-bottom: 0;
@@ -156,7 +173,7 @@ pre {
     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 16));
     max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
     margin-right: auto;
-    margin-left: auto;
+    margin-left: 8.3%;
     padding-right: $spacing-unit;
     padding-left: $spacing-unit;
     @extend %clearfix;
@@ -168,6 +185,24 @@ pre {
         padding-left: $spacing-unit / 2;
     }
 }
+
+.hero-wrapper {
+    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 16));
+    max-width:         65%;
+    margin-right: auto;
+    margin-left: 8.3%;
+    padding-right: $spacing-unit;
+    padding-left: $spacing-unit;
+    @extend %clearfix;
+
+    @include media-query($on-laptop) {
+        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
+        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
+        padding-right: $spacing-unit / 2;
+        padding-left: $spacing-unit / 2;
+    }
+}
+
 
 .nav-wrapper {
     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 8));
