--- a/css/main.scss
+++ b/css/main.scss
@@ -6,16 +6,20 @@
 
 
 // Our variables
-$base-font-family: "Operator SSm A", "Operator SSm B", serif;
-$base-font-size:   12px;
+$base-font-family: "Surveyor SSm A", "Surveyor SSm B", serif;
+$base-font-size:   14px;
 $small-font-size:  $base-font-size * 0.875;
-$base-line-height: 2.0;
+$base-line-height: 27px;
 
 $spacing-unit:     30px;
 
-$text-color:       #2e2e2e;
+$text-color:       #2b2b2b;
 $background-color: #fff;
 $brand-color:      #ff4743;
+$brand-red:			#CC4455;
+$brand-off-white:	#F8F3F3;
+$brand-black:		#2B2B2B;
+$brand-gray:		#6A6A6A;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
@@ -26,8 +30,8 @@ $content-width:    800px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
-$narrow:		   1300px;
-
+$narrow:		   1500px;
+$big:			   1502px;
 
 // Using media queries with like this:
 // @include media-query($on-palm) {
