--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -122,7 +122,7 @@
         color: #ff4743;
         font-size:11px;
         font-family:"Operator SSm A", "Operator SSm B";
-        font-weight:300;
+        font-weight:200;
         width:100%;
         float:right;
         text-align:right;
@@ -161,7 +161,7 @@
 
         &:last-child{
             float:right;
-            font-weight:600;
+            font-weight:500;
              @include media-query($narrow) {
             transition-property: width, background-color, padding-top, padding-left, padding-right;
             margin-right:6%;
@@ -311,7 +311,7 @@
     font-family: "Knockout 26 A", "Knockout 26 B";
     font-weight:400;
     font-size:122px;
-    //line-height:0.8;
+    line-height:0.8;
     //margin-bottom:24px;
     width:30%;
     height:auto;
@@ -447,7 +447,7 @@
 .post-title-min-note {
     border-bottom:1px solid $brand-black;
     font-family: "Surveyor SSm A", "Surveyor SSm B";
-    font-weight: 400;
+    font-weight: 300;
     color:$brand-gray;
     margin:0;
     margin-bottom:10px;
@@ -616,7 +616,7 @@
 
 .post-meta-note {
     font-family: "Surveyor SSm A", "Surveyor SSm B";
-    font-weight: 400;
+    font-weight: 300;
     color:$brand-off-white;
     margin:0;
     font-size:10px;
@@ -761,7 +761,7 @@
 
 .post-title-note {
     font-size: 14px;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 1.6;
     color:$brand-black;
     font-family: "Surveyor SSm A", "Surveyor SSm B", serif;
@@ -970,7 +970,7 @@ width:100%;
         font-size:12px;
         float:right;
         font-family:"Surveyor SSm A", "Surveyor SSm B";
-        font-weight:400;
+        font-weight:300;
         margin-top:200px;
         line-height:34px;
         //border: 1px solid $brand-black;
