testing ideal sans

--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$base-font-family: "Surveyor SSm A", "Surveyor SSm B", serif;
+$base-font-family: "Ideal Sans SSm A", "Ideal Sans SSm B", sans-serif;
 $base-font-size:   14px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 27px;
