revert to surveyor for body

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body>
 
     {% include header.html %}
-    {% if page.url == site.baseurl %}
+    {% if page.title contains 'home'%}
   <div class="hero">
     <div class="curtain"></div>
       <div class="hero-wrapper">
