--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -143,6 +143,7 @@
             float:left;
             transition-duration: 350ms;
             transition-timing-function: ease;
+            font-size:10px;
             text-align:left;
             width:auto;
             margin-right:0;
@@ -304,6 +305,7 @@
 
     @include media-query($on-palm) {
         width:100%;
+        margin-top:40px;
     }
 }
 
