--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,8 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
   
-  <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7408374/7373552/css/fonts.css" />
+ <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7408374/7813952/css/fonts.css" />
+
+ <script src="{{site.baseurl }}/js/header.js" type="text/javascript"></script>
 
 </head>
