--- a/css/main.scss
+++ b/css/main.scss
@@ -3,35 +3,36 @@
 ---
 @charset "utf-8";
 
+/////fonts/////
+$font-body:  "Surveyor SSm A", "Surveyor SSm B", Georgia, serif;
+$font-heading: "Ideal Sans SSm A","Ideal Sans SSm B", Helvetica, Arial, sans-serif;
+$font-link: "Ideal Sans SSm A","Ideal Sans SSm B", Helvetica, Arial, sans-serif;
+$font-body-size: 12px;
+$heading-size: 18px;
+$small-font-size:  9px;
+$small-line-height:19px;
+$body-line-height: 26px;
+$spacing-unit: 30px;
 
-
-// Our variables
-$base-font-family: "Surveyor SSm A", "Surveyor SSm B", serif;
-$base-font-size:   14px;
-$small-font-size:  $base-font-size * 0.875;
-$base-line-height: 27px;
-
-$spacing-unit:     30px;
-
-$text-color:       #2b2b2b;
+/////colors/////
+$red-color:#CC4455;
+$body-color: #5E5E5E;
 $background-color: #fff;
-$brand-color:      #ff4743;
-$brand-red:			#CC4455;
-$brand-off-white:	#F8F3F3;
-$brand-black:		#2B2B2B;
-$brand-gray:		#6A6A6A;
-
-$grey-color:       #828282;
+$link-color: #BABABA;
+$black-color: #2b2b2b;
+$grey-color: #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
-// Width of the content area
-$content-width:    800px;
+//width of the content area
+$content-width: 800px;
 
-$on-palm:          600px;
-$on-laptop:        800px;
-$narrow:		   1500px;
-$big:			   1502px;
+/////media query sizes/////
+$on-palm: 600px;
+$on-laptop: 800px;
+$slim: 1100px;
+$small-desktop: 1300px;
+$narrow: 1500px;
 
 // Using media queries with like this:
 // @include media-query($on-palm) {
@@ -48,7 +49,7 @@ $big:			   1502px;
 
 
 
-// Import partials from `sass_dir` (defaults to `_sass`)
+// import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
         "layout",
