--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,17 @@
 <header id="site-header" class="site-header">
+    <a class="site-title" href="{{ site.baseurl }}/">olsen.works</a>
     <nav class="site-nav">
       <div class="trigger">
-        <a class="site-title" href="{{ site.baseurl }}/">olsen.works</a>
-        <a class="page-link" href="mailto:scg.olsen@gmail.com"> Contact</a>
-        {% for page in site.pages %}
-        <a class="page-link" href="{{ page.url | prepend: site.baseurl }}"> {{ page.title }}</a>
+        <p class="current-page-indicator">Currently Viewing: {{ page.title }}</p>
+        {% for item in site.pages %}
+          {% if page.url != item.url and item.title != "About" and item.title != "Work With Me" and item.title != "css" and item.title != "feed" %}
+        <a class="page-link" href="{{ item.url | prepend: site.baseurl }}"> {{ item.title }}</a>
+          {% endif %}
         {% endfor %}
       </div>
     </nav>
+    <aside class="page-info">
+        <h4 class="info-heading">Info</h4>
+        <p class="info-content">{{ page.info }}</p>
+    </aside>
 </header>
