--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,12 @@
 <html>
 {% include head.html %}
   <body>
+  <section class="content-area">
     {% include header.html %}
-    <div class="page-content">
+    <section class="page-content">
         {{ content }}
         {% include footer.html %}
-    </div>
+    </section>
+  </section>
   </body>
 </html>
