--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,4 +1,57 @@
+/////content-area/////
+
+.content-area {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
 /////site-header/////
+
+.site-header {
+  margin-top: 60px;
+  width: 260px;
+  position: fixed;
+  margin-left: 11%;
+  @media screen and (min-width:1024px) and (max-width: 1440px) {
+    margin-left: 8%;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    margin-left: 5%;
+  }
+  @media screen and (max-width: 767px) {
+    width: 100%;
+    margin: 0;
+    top: 0;
+  }
+}
+
+.site-title {
+  font-family: $font-link;
+  margin-bottom: $spacing-unit;
+
+}
+
+.site-nav {
+  margin-top: $spacing-unit;
+}
+
+.page-info {
+  margin-top: $spacing-unit / 2;
+}
+
+.site-header a {
+  transition-property: color;
+  transition-duration: 0.6s;
+  color: $nav-color;
+  margin-right: 16px;
+}
+
+.site-header a:hover {
+  transition-property: color;
+  transition-duration: 0.6s;
+  color: $body-color;
+}
 
 /////navigation/////
 
@@ -6,6 +59,41 @@
 
 ////page-content/////
 
+.page-content {
+  width: 360px;
+  margin-left: 37.5%;
+  margin-top: 116px;
+  @media screen and (min-width: 1024px) and (max-width: 1440px) {
+    margin-left: 37.5%;
+  }
+  @media screen and (min-width: 768px)  and (max-width: 1023px) {
+    margin-left: 44%;
+  }
+  @media screen and (max-width: 767px) {
+    width: 100%;
+    margin: 0;
+    top: 0;
+  }
+}
+
 /////posts/////
+
+.post-title {
+  margin-bottom: 24px;
+}
+
+//post-list//
+
+.post-module {
+  margin-bottom: $spacing-unit * 2;
+}
+
+.post-title-link {
+  font-weight: 400;
+}
+
+.post-abstract {
+  margin-top: $spacing-unit / 10;
+}
 
 /////hero section/////
