--- a/css/main.scss
+++ b/css/main.scss
@@ -1,28 +1,29 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
+title: css
 ---
 @charset "utf-8";
 
 /////fonts/////
 $font-body:  "Surveyor SSm A", "Surveyor SSm B", Georgia, serif;
-$font-heading: "Ideal Sans SSm A","Ideal Sans SSm B", Helvetica, Arial, sans-serif;
+$font-display: "Surveyor SSm A", "Surveyor SSm B", Georgia, serif;
 $font-link: "Ideal Sans SSm A","Ideal Sans SSm B", Helvetica, Arial, sans-serif;
-$font-body-size: 12px;
-$heading-size: 18px;
-$small-font-size:  9px;
-$small-line-height:19px;
-$body-line-height: 26px;
-$spacing-unit: 30px;
+$font-body-size: 14px;
+$font-display-size: 24px;
+$heading-size: 24pt;
+$small-font-size:  10px;
+$small-line-height:16px;
+$body-line-height: 24px;
+$font-display-line-height: 29px;
+$spacing-unit: 40px;
 
 /////colors/////
-$red-color:#CC4455;
-$body-color: #5E5E5E;
-$background-color: #fff;
-$link-color: #BABABA;
-$black-color: #2b2b2b;
-$grey-color: #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
+$link-color:#CC4455;
+$body-color: #000;
+$background-color: #FFF;
+$nav-color: rgba(0,0,0,0.6);
+$black-color: #2B2B2B;
+$grey-color: #4A4A4A;
 
 //width of the content area
 $content-width: 800px;
@@ -53,5 +54,6 @@ $narrow: 1500px;
 @import
         "base",
         "layout",
+        "typography",
         "syntax-highlighting"
 ;
