--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,5 +9,6 @@
         {% include footer.html %}
     </section>
   </section>
+  <script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
   </body>
 </html>
