--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+  align-items: baseline;
 }
 
 /////site-header/////
@@ -11,8 +12,8 @@
 .site-header {
   margin-top: 60px;
   width: 260px;
-  position: fixed;
   margin-left: 11%;
+  position: absolute;
   @media screen and (min-width:1024px) and (max-width: 1440px) {
     margin-left: 8%;
   }
@@ -29,22 +30,105 @@
 .site-title {
   font-family: $font-link;
   margin-bottom: $spacing-unit;
+}
 
+.nav-info-container {
+  position:fixed;
+  width:260px;
+  @media screen and (max-width: 767px){
+    position: fixed;
+    bottom: 0;
+    color: #FFFFFF;
+    width: 100%;
+    background-color: $black-color;
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.mobile-menu-button {
+  margin-bottom: $spacing-unit;
+  padding:40px;
+  background-color: $link-color;
+  border: 4px solid #fff;
+  color: #fff;
+  margin-right:10%;
+  height:auto;
+  border-radius: 1px;
+  @media screen and (min-width: 768px){
+    display:none;
+  }
+}
+
+.mobile-menu-button-alt {
+  border: none;
+  width: 100%;
+  margin:0;
+  margin-bottom: $spacing-unit / 2;
+}
+
+//apply to show mobile view
+.nav-mobile-show {
+  height: 100%;
 }
 
 .site-nav {
   margin-top: $spacing-unit;
+  @media screen and (max-width: 767px){
+    display:none;
+    margin-top: 0;
+    flex-wrap: wrap;
+    width:100%;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(250,250,250, 1);
+    border-right: $grey-color 4px solid;
+  }
+}
+
+.site-nav-show {
+  display: flex;
+}
+
+.site-nav a {
+  margin-right: 16px;
+  @media screen and (max-width: 767px){
+    width: 100%;
+    padding:80px 40px 80px 40px;
+    border-bottom: 1px solid $black-color;
+    border-top: 1px solid $black-color;
+    margin-right:0;
+  }
 }
 
 .page-info {
   margin-top: $spacing-unit / 2;
+  @media screen and (max-width: 767px){
+    margin-top: 0;
+    padding: 20px;
+    background-color: $black-color;
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.page-info-alt {
+  padding: 0;
+  flex-wrap: wrap;
+}
+
+.info {
+  @media screen and (max-width: 767px){
+    margin-left: 2%;
+    width: 80%;
+  }
 }
 
 .site-header a {
   transition-property: color;
   transition-duration: 0.6s;
   color: $nav-color;
-  margin-right: 16px;
+  //margin-right: 16px;
 }
 
 .site-header a:hover {
@@ -60,19 +144,19 @@
 ////page-content/////
 
 .page-content {
-  width: 360px;
-  margin-left: 37.5%;
-  margin-top: 116px;
-  @media screen and (min-width: 1024px) and (max-width: 1440px) {
-    margin-left: 37.5%;
-  }
+  width: 400px;
+  margin-left: 34%;
+  margin-top: 140px;
   @media screen and (min-width: 768px)  and (max-width: 1023px) {
     margin-left: 44%;
   }
   @media screen and (max-width: 767px) {
-    width: 100%;
+    width: 81%;
     margin: 0;
     top: 0;
+    margin-bottom: 200px;
+    margin-left: 10%;
+    margin-top: 80px;
   }
 }
 
@@ -92,8 +176,18 @@
   font-weight: 400;
 }
 
-.post-abstract {
+.post-excerpt {
   margin-top: $spacing-unit / 10;
+}
+
+//notes styleing//
+
+.post-container blockquote p {
+  @media screen and (min-width: 1250px) {
+    position: absolute;
+    width: 350px;
+    margin-left: 37%;
+  }
 }
 
 /////hero section/////
