--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -16,6 +16,11 @@ blockquote p {
   font-family: $font-link;
 }
 
+figcaption {
+  font-size: $small-font-size;
+  font-family: $font-body;
+}
+
 ////headings////
 
 h1 {
