--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,5 +24,5 @@
       </g>
     </g>
   </svg>
-  <a>Grab Coffee With Me</a>
+  <a href="mailto:scg.olsen@gmail.com?Subject=Let's%20get%20coffee!">Grab Coffee With Me</a>
 </footer>
