--- a/_sass/anim.scss
+++ b/_sass/anim.scss
@@ -103,14 +103,14 @@
   //animation-timing-function: cubic-bezier(.27,.6,.77,.23);
 }
 
-.site-title {
+/*.site-title {
   animation: colorToLink;
   animation-delay: 2s;
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-timing-function: cubic-bezier(1,.01,.38,.81);
-}
+}*/
 
 ////Mobile Menu////
 .page-info-alt {
