--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
 	<div class="post-container">
 		<header class="post-header">
 			<h1 class="post-title">{{ page.title }}</h1>
+			<p class="info-content">{{ page.info }}</p>
 		</header>
 		<article class="post-content">
 			{{ content }}
