--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -17,7 +17,7 @@ svg {
   width:100%;
   position:fixed;
   bottom:0;
-  display: flex;
+  display: none;
 }
 
 .site-footer a {
@@ -53,57 +53,81 @@ svg {
 /////site-header/////
 
 .site-header {
-  margin-top: 60px;
-  width: 260px;
-  margin-left: 11%;
-  position: absolute;
+  //border-top: 1px solid $black-color;
+  margin-top: $spacing-unit / 2;
+  padding-left: $spacing-unit;
+  width: 100%;
   @media screen and (min-width:1220px) and (max-width: 1440px) {
-    margin-left: 8%;
+    //margin-left: 8%;
   }
   @media screen and (min-width: 768px) and (max-width: 1023px) {
-    margin-left: 5%;
+    //margin-left: 5%;
   }
   @media screen and (max-width: 767px) {
     width: 100%;
     margin: 0;
+    margin-top: $spacing-unit / 2;
     top: 10px;
   }
 }
 
 .site-title {
+  padding-top: 3px;
   font-family: $font-link;
   margin-bottom: $spacing-unit;
   @media screen and (max-width: 767px) {
-    margin-left: 10%;
+    //margin-left: 10%;
   }
 }
 
 .current-page-indicator {
   @media screen and (max-width: 767px) {
-    margin-left: 10%;
+    //margin-left: 10%;
   }
 }
 
 .site-info {
-  border-bottom: 1px solid $black-color;
+  //background-color:$black-color;
+  //color:#fff;
+  float:left;
+  width:40%;
   @media screen and (max-width: 767px) {
-    border-bottom: 1px solid $black-color;
+    //border-bottom: 1px solid $black-color;
+    width:100%;
   }
 }
 
+.info-content {
+  opacity:0.5;
+  //border-top: 1px solid $black-color;
+  padding-top:2px;
+  max-width: 360px;
+  margin-bottom: $spacing-unit - 4px;
+}
+
+.info-content-link {
+  padding-top:2px;
+  max-width: 360px;
+  margin-bottom: $spacing-unit;
+}
+
+.info-content-link:hover {
+  text-decoration: underline;
+}
+
 .nav-info-container {
-  position:fixed;
-  width:260px;
-  opacity: 0.2;
+  float: right;
+  width: 36%;
+  margin-right: 3%;
   @media screen and (max-width: 767px){
-    opacity: 1;
+    /*opacity: 1;
     position: fixed;
     bottom: 0;
     color: #FFFFFF;
     width: 100%;
     background-color: $black-color;
     display: flex;
-    justify-content: center;
+    justify-content: center;*/
   }
   &:hover {
     opacity:1;
@@ -137,12 +161,27 @@ svg {
 }
 
 .site-nav {
-  margin-top: $spacing-unit;
+  //margin-top: $spacing-unit;
+width:100%;
   @media screen and (max-width: 767px){
     display:none;
     margin-top: 0;
     flex-wrap: wrap;
-    width:0;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(250,250,250, 1);
+    border-right: $grey-color 4px solid;
+    height:0;
+  }
+}
+
+.site-nav-alt {
+  //margin-top: $spacing-unit;
+  width:100%;
+  @media screen and (max-width: 767px){
+    display:none;
+    margin-top: 0;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     background-color: rgba(250,250,250, 1);
@@ -159,6 +198,19 @@ svg {
 
 .site-nav a {
   margin-right: 16px;
+  float:right;
+  @media screen and (max-width: 767px){
+    width: 100%;
+    padding:80px 40px 80px 40px;
+    border-bottom: 1px solid $black-color;
+    border-top: 1px solid $black-color;
+    margin-right:0;
+  }
+}
+
+.site-nav-alt a {
+  margin-right: 16px;
+
   @media screen and (max-width: 767px){
     width: 100%;
     padding:80px 40px 80px 40px;
@@ -169,14 +221,14 @@ svg {
 }
 
 .page-info {
-  margin-top: $spacing-unit / 2;
+  margin-top: ($spacing-unit / 2) + 10;
   @media screen and (max-width: 767px){
-    margin-top: 0;
+    /*margin-top: 0;
     padding: 20px;
     background-color: $black-color;
     display: flex;
     justify-content: center;
-    height:auto;
+    height:auto;*/
   }
 }
 
@@ -223,11 +275,11 @@ svg {
 ////page-content/////
 
 .page-content {
-  width: 400px;
-  margin-left: 34%;
+  max-width: 480px;
+  margin-left: 28%;
   margin-top: 140px;
   @media screen and (min-width: 768px)  and (max-width: 1219px) {
-    margin-left: 44%;
+    //margin-left: 44%;
   }
   @media screen and (max-width: 767px) {
     width: 81%;
@@ -242,7 +294,7 @@ svg {
 /////posts/////
 
 .post-title {
-  margin-bottom: 24px;
+  margin-bottom: 4px;
 }
 
 .post-container {
@@ -273,9 +325,9 @@ svg {
 
 .post-container blockquote p {
   @media screen and (min-width: 1250px) {
-    position: absolute;
-    width: 350px;
-    margin-left: 37%;
+    //position: absolute;
+    //width: 350px;
+    //margin-left: 37%;
   }
 }
 
