--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <div class="site-info">
         <a class="site-title" href="{{ site.baseurl }}/">olsen.works</a>
         <p class="current-page-indicator">Currently Viewing: {{ page.title }}</p>
-        <!--<p class="info-content">{{ page.info }}</p>-->
+        <p class="current-page-indicator"><a class="email-link" href="mailto:scg.olsen@gmail.com">Email the Author</a></p>
     </div>
     {% if page.title != "Home" %}
     <div class="nav-info-container">
