--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -64,6 +64,12 @@ h4 {
   font-size: $small-font-size;
 }
 
+.email-link {
+  font-weight: 500;
+  font-family: $font-link;
+  font-size: $small-font-size;
+}
+
 .info-content {
   font-size: $small-font-size;
   line-height: $small-line-height;
