--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -27,7 +27,7 @@ figcaption {
 h1 {
   font-family: $font-display;
   font-size: 24px;
-  line-height: 30px;
+  line-height: 40px;
   font-weight:300;
   font-style:italic;
   //text-align: center;
@@ -62,6 +62,7 @@ h4 {
   font-weight: 500;
   font-family: $font-link;
   font-size: $small-font-size;
+  display:none;
 }
 
 .email-link {
