--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -27,9 +27,10 @@ figcaption {
 h1 {
   font-family: $font-display;
   font-size: 24px;
-  line-height: 60px;
+  line-height: 40px;
   font-weight:300;
-  font-style:italic;
+  font-style: italic;
+  margin-bottom: 20px;
   //text-align: center;
   //letter-spacing: 0.1em;
 }
