--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -30,7 +30,7 @@ h1 {
   line-height: 40px;
   font-weight:300;
   font-style: italic;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   //text-align: center;
   //letter-spacing: 0.1em;
 }
@@ -70,6 +70,7 @@ h4 {
   font-weight: 500;
   font-family: $font-link;
   font-size: $small-font-size;
+  display: block;
 }
 
 .info-content {
