--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -47,6 +47,7 @@ h4 {
   color: $grey-color;
   font-size: 14px;
   font-weight: 500;
+  display: none;
 }
 
 ////class-specific////
@@ -66,18 +67,18 @@ h4 {
   display:none;
 }
 
-.email-link {
-  font-weight: 500;
-  font-family: $font-link;
-  font-size: $small-font-size;
-  display: block;
-}
-
 .info-content {
   font-size: $small-font-size;
   line-height: $small-line-height;
   font-weight: 500;
   display:none;
+}
+
+.email-link {
+  font-weight: 500;
+  font-family: $font-link;
+  font-size: $small-font-size;
+  display: block;
 }
 
 .post-content p {
