--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -30,7 +30,7 @@ h1 {
   line-height: 40px;
   font-weight:300;
   font-style: italic;
-  margin-bottom: 40px;
+  margin-bottom: $spacing-unit;
   //text-align: center;
   //letter-spacing: 0.1em;
 }
