--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@ title: css
 
 /////fonts/////
 $font-body:  "Surveyor SSm A", "Surveyor SSm B", Georgia, serif;
-$font-display: "Surveyor SSm A", "Surveyor SSm B", Georgia, serif;
+$font-display: "Chronicle Hairline A", "Chronicle Hairline B", Georgia, serif;
 $font-link: "Ideal Sans SSm A","Ideal Sans SSm B", Helvetica, Arial, sans-serif;
 $font-body-size: 14px;
 $font-display-size: 18px;
