updated styles, added nyrb critique 1

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -356,3 +356,21 @@ figcaption {
 }
 
 /////hero section/////
+
+.post-title-link-p {
+  margin-bottom: $spacing-unit + 20px;
+}
+
+.post-list {
+  margin-bottom: $spacing-unit;
+}
+
+////critiques////
+
+.critique-prelude {
+  text-align: center;
+}
+
+.critique-work {
+  margin-bottom: $spacing-unit !important;
+}
