--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,10 +10,11 @@ layout: default
 		<article class="post-content">
 			{{ content }}
 		</article>
-		<span class="post-meta">
+		<p class="datum">Scott Olsen <br>Philadelphia, Novemeber 2016</p>
+		<!--<span class="post-meta">
 			<div class="post-author">
 				<p>A piece by Scott Olsen <br> Published on: {{ page.date | date: "%b %-d, %Y" }}</p>
 			</div>
-		</span>
+		</span>-->
 	</div>
 </div>
